# markdown-docs-python

./: .gitignore  Dockerfile  main.py  pyproject.toml  requirements.txt
md/: _home.md  gnu-stow.md  home.md  python-cli-pyenv.md  python-poetry.md  python-rsa.md  rust-cargo-cli.md  wat-test-dingen.md
templates/: first.html  styles.css
