[tool.poetry]
name = "mdown"
version = "0.1.0"
description = ""
authors = ["adjaythakoerdien <a.thakoerdien@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
markdown = "3.6"
jinja2 = "^3.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
